--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1607,7 +1607,6 @@
             <div class="Grid-cell">
               <div class="element">
                 <h4> <strong> Feedback - Concept A </strong> </h4>
-
                 <ul>
                   <li>The concept is an extension of the existing prayer feature in the app.</li>
                   <li>In addition to praying together, users may also wish to <span class="textDecor GLORIFY">communicate while they are waiting</span>.</li>
@@ -1620,9 +1619,9 @@
               <div class="element">
                 <h4> <strong> Feedback - Concept B </strong> </h4>
                 <ul>
-                  <li>It becomes quite complex when bible study is restricted to keyboard-based chatting only.</li>
+                  <li>It becomes quite complex when bible study is restricted to <span class="textDecor GLORIFY">keyboard-based chatting</span> only.</li>
                   <li>Discussing only one topic may become monotonous.</li>
-                  <li>Spending too much time in a room can lead to losing focus on the topic.</li>
+                  <li>Spending too much time in a room can lead to <span class="textDecor GLORIFY">losing focus on the topic</span>.</li>
                 </ul>
               </div>
             </div>
@@ -1631,12 +1630,8 @@
                 <h4> <strong> I'd like to iterate on Concept A (Group prayer) by adding some elements from Concept B
                     (Chatting before group prayer start).</strong> </h4>
                 <ul>
-                  <li>In the new iteration, users inside the group prayer room have the ability to chat with each
-                    other
-                    before the group prayer session begins.</li>
-                  <li>The app will retain the history of group prayers, including the fellowships who participated in
-                    the
-                    prayer sessions together. </li>
+                  <li>In the new iteration, users inside the group prayer room have the ability to <span class="textDecor GLORIFY">chat with each other before the group prayer session begins</span>.</li>
+                  <li>The app will <span class="textDecor GLORIFY">retain the history of group prayers</span>, including the fellowships who participated in the prayer sessions together. </li>
                 </ul>
               </div>
             </div>
@@ -1665,8 +1660,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element leftVerLine border-radius colorBgGlorifyLt GLORIFY">
-                <h3> Strive to ensure that the initial version of the community design can be seamlessly integrated into
-                  the existing mobile app. Additionally, identify potential issues related to the concept and user flow.
+                <h3> Strive to ensure that the initial version of the community design can be  <span class="textDecor GLORIFY">seamlessly integrated into the existing mobile app</span>. Additionally, identify potential issues related to the concept and user flow.
                 </h3>
               </div>
             </div>
