--- a/glorify/index.html
+++ b/glorify/index.html
@@ -2133,7 +2133,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Wireframe test <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                <h2 class="tArrow">Wireframe test 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
                 </h2>
               </div>
             </div>
@@ -2142,7 +2142,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2> <strong class="colorGLORIFYOrange"> Test plan </strong> </h2>
+                <h2> <strong class="colorGLORIFYOrange"> Test plan - Wireframe Test on Figma </strong> </h2>
               </div>
             </div>
           </div>
@@ -2150,13 +2150,13 @@
             <div class="Grid-cell">
               <div class="element">
                 <h4> <strong> Title </strong> </h4>
-                <p>Group Prayer, Adding Fellowship, and Chatting - Wireframe Test on Figma</p>
+                <p>Group Prayer, Adding Fellowship, and Chatting</p>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element">
                 <h4> <strong> Test goal </strong> </h4>
-                <p>focus on the overall functionality, focusing on group prayer, adding a new fellowship, and
+                <p><span class="textDecor GLORIFY">Focus on the overall functionality</span>, focusing on group prayer, adding a new fellowship, and
                   chatting with other fellowships.</p>
               </div>
             </div>
