--- a/glorify/index.html
+++ b/glorify/index.html
@@ -930,7 +930,7 @@
             <h4 class="accordion noMargin"><strong>Participant 3</strong></h4>
 
             <div class="accordion-content accordionBorderBottom">
-              <img class="iconM" src="P2.png" alt="search">
+              <img class="iconM" src="P3.png" alt="search">
               <h6> <strong> Jennifer, 27 years old, Designer, female, based in New York </strong> </h6>
               <div class="blankHXS"></div>
               <h6> <strong> What kind of group worship have you participated in as part of a Christian group
@@ -2134,10 +2134,14 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2> <strong class="colorGLORIFYOrange"> Test plan - Wireframe Test on Figma </strong> </h2>
+                <h2 class="centerVer">
+                  <img class="iconS" src="IconTest.svg" alt="Design">
+                  <span class="colorGLORIFYOrange"> Test plan - Wireframe Test on Figma </span>
+                </h2>
               </div>
             </div>
           </div>
+
           <div class="Grid Grid--gutters Grid--cols-3">
             <div class="Grid-cell">
               <div class="element">
@@ -2267,14 +2271,17 @@
               </div>
             </div>
           </div>
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2> <strong class="colorGLORIFYOrange"> Analyze the testing results </strong> </h2>
+                <h2 class="centerVer">
+                  <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <span class="colorGLORIFYOrange"> Analyze the testing results </span>
+                </h2>
               </div>
             </div>
           </div>
+
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
@@ -2583,6 +2590,141 @@
             </h2>
           </div>
           <!-- Arrow -->
+          <div class="blankHS"></div>
+
+          <table>
+            <tr>
+              <th></th>
+              <td>A</td>
+              <td>B</td>
+              <td>C</td>
+            </tr>
+            <tr>
+              <th>Listen</th>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+            </tr>
+            <tr>
+              <th>Bible</th>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+            </tr>
+            <tr>
+              <th>Today</th>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+            </tr>
+            <tr>
+              <th>Prayers</th>
+              <td>Shared</td>
+              <td>Group prayer</td>
+              <td>Quick start</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> </td>
+              <td> </td>
+              <td> Custom</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> </td>
+              <td> Send prayer</td>
+              <td> </td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> </td>
+              <td> Send prayer request</td>
+              <td> </td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> Private </td>
+              <td>Pray </td>
+              <td> </td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> </td>
+              <td> Response</td>
+              <td> </td>
+            </tr>
+
+            <tr>
+              <th>Journal</th>
+              <td> </td>
+              <td> </td>
+              <td> </td>
+            </tr>
+
+          </table>
+          <div class="blankHS"></div>
+
+          <table>
+            <tr>
+              <th></th>
+              <td>A</td>
+              <td>B</td>
+            </tr>
+            <tr>
+              <th>Listen</th>
+              <td> </td>
+              <td> </td>
+            </tr>
+            <tr>
+              <th>Bible</th>
+              <td> </td>
+              <td> </td>
+            </tr>
+            <tr>
+              <th>Today</th>
+              <td> </td>
+              <td> </td>
+            </tr>
+            <tr>
+              <th>Prayers</th>
+              <td>Group prayer</td>
+              <td>Quick start</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> </td>
+              <td> Custom</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> Shared</td>
+              <td> Send prayer</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> </td>
+              <td> Send prayer request</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> Private </td>
+              <td>Pray </td>
+            </tr>
+            <tr>
+              <th></th>
+              <td> </td>
+              <td> Response</td>
+            </tr>
+
+            <tr>
+              <th>Journal</th>
+              <td> </td>
+              <td> </td>
+            </tr>
+
+          </table>
+          <div class="blankHS"></div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
