--- a/glorify/index.html
+++ b/glorify/index.html
@@ -548,13 +548,11 @@
         <div class="Grid Grid--full ">
           <div class="Grid-cell">
             <div class="element">
-              <div class="element leftVerLine border-radius colorBgGlorifyLt GLORIFY">
-                <h3> The research goal is to study the <span class="textDecor GLORIFY">Christian community</span>,
-                  understand their interaction patterns, discover why they wish to connect with others in the community,
-                  and explore how to incorporate this <span class="textDecor GLORIFY">initial community version into the
-                    existing Glorify app</span>.
-                </h3>
-              </div>
+              <h3> The research goal is to study the <span class="textDecor GLORIFY">Christian community</span>,
+                understand their interaction patterns, discover why they wish to connect with others in the community,
+                and explore how to incorporate this <span class="textDecor GLORIFY">initial community version into the
+                  existing Glorify app</span>.
+              </h3>
             </div>
           </div>
         </div>
@@ -1646,15 +1644,15 @@
             <img class="modal-target " src="Research_Diagram_Design.svg" alt="Mind map">
           </div>
         </div>
-        <div class="Grid Grid--full">
+
+
+        <div class="Grid Grid--full ">
           <div class="Grid-cell">
             <div class="element">
-              <div class="element leftVerLine border-radius colorBgGlorifyLt GLORIFY">
-                <h3> Strive to ensure that the initial version of the community design can be <span
-                    class="textDecor GLORIFY">seamlessly integrated into the existing mobile app</span>. Additionally,
-                  identify potential issues related to the concept and user flow.
-                </h3>
-              </div>
+              <h3> Strive to ensure that the initial version of the community design can be <span
+                  class="textDecor GLORIFY">seamlessly integrated into the existing mobile app</span>. Additionally,
+                identify potential issues related to the concept and user flow.
+              </h3>
             </div>
           </div>
         </div>
@@ -1767,9 +1765,9 @@
 
                 <ul>
                   <li>Will integrated into current prayer feature</li>
-                  <li>Enable create group prayer</li>
-                  <li>Enable participate group prayer</li>
-                  <li>Enable leave group prayer</li>
+                  <li>Enable <span class="textDecor GLORIFY">create</span> group prayer</li>
+                  <li>Enable <span class="textDecor GLORIFY">participate</span> group prayer</li>
+                  <li>Enable <span class="textDecor GLORIFY">leave</span> group prayer</li>
                 </ul>
               </div>
             </div>
@@ -1778,9 +1776,9 @@
                 <h4> <strong> Chat </strong> </h4>
                 <ul>
                   <li>Adding a new icon into top navigation</li>
-                  <li>Able to see the notification anytime</li>
-                  <li>Able to receive message and fellowship request from other fellowship</li>
-                  <li>Enable the compose message with other fellowship</li>
+                  <li>Able to see the <span class="textDecor GLORIFY">notification</span> anytime</li>
+                  <li>Able to <span class="textDecor GLORIFY">receive</span> message and fellowship request from other fellowship</li>
+                  <li>Enable the <span class="textDecor GLORIFY">compose</span> message with other fellowship</li>
 
                 </ul>
               </div>
@@ -2388,15 +2386,14 @@
             <img class="modal-target " src="Research_Diagram_Iterate.svg" alt="Mind map">
           </div>
         </div>
-        <div class="Grid Grid--full">
+
+        <div class="Grid Grid--full ">
           <div class="Grid-cell">
             <div class="element">
-              <div class="element leftVerLine border-radius colorBgGlorifyLt GLORIFY">
-                <h3> The iteration prioritizes simplifying the user flow, making it intuitive to locate and navigate.
-                  Simultaneously, the design should be appealing enough to motivate users to participate in group
-                  activities and forge connections.
-                </h3>
-              </div>
+              <h3> The iteration prioritizes simplifying the user flow, making it intuitive to locate and navigate.
+                Simultaneously, the design should be appealing enough to motivate users to participate in group
+                activities and forge connections.
+              </h3>
             </div>
           </div>
         </div>
@@ -3118,18 +3115,16 @@
             <img class="modal-target " src="Research_Diagram_Enhance.svg" alt="Mind map">
           </div>
         </div>
-        <div class="Grid Grid--full">
+
+        <div class="Grid Grid--full ">
           <div class="Grid-cell">
             <div class="element">
-              <div class="element leftVerLine border-radius colorBgGlorifyLt GLORIFY">
-                <h3>The high-fidelity prototype aims to foster smooth interactions during group prayer, ensuring that it
-                  is interactive and helps users experience a sense of togetherness.
-                </h3>
-              </div>
+              <h3>The high-fidelity prototype aims to foster smooth interactions during group prayer, ensuring that it
+                is interactive and helps users experience a sense of togetherness.
+              </h3>
             </div>
           </div>
         </div>
-
       </div>
       <section id="content41">
         <!-- Arrow -->
