--- a/glorify/index.html
+++ b/glorify/index.html
@@ -513,8 +513,8 @@
         </li>
         <li><a href="#content3" class="titleRightPanel">Iterate</a>
           <ul>
-            <li class="rightPanel"><a href="#content31"> &#160; Update</a></li>
-            <li class="rightPanel"><a href="#content32"> &#160; Tree test</a></li>
+            <li class="rightPanel"><a href="#content31"> &#160; Flow Update</a></li>
+            <li class="rightPanel"><a href="#content32"> &#160; Organizing Content</a></li>
             <li class="rightPanel"><a href="#content33"> &#160; Simplify</a></li>
             <li class="rightPanel"><a href="#content34"> &#160; Wireframe test 2</a></li>
           </ul>
@@ -1777,7 +1777,8 @@
                 <ul>
                   <li>Adding a new icon into top navigation</li>
                   <li>Able to see the <span class="textDecor GLORIFY">notification</span> anytime</li>
-                  <li>Able to <span class="textDecor GLORIFY">receive</span> message and fellowship request from other fellowship</li>
+                  <li>Able to <span class="textDecor GLORIFY">receive</span> message and fellowship request from other
+                    fellowship</li>
                   <li>Enable the <span class="textDecor GLORIFY">compose</span> message with other fellowship</li>
 
                 </ul>
@@ -2588,140 +2589,6 @@
           </div>
           <!-- Arrow -->
           <div class="blankHS"></div>
-
-          <table>
-            <tr>
-              <th></th>
-              <td>A</td>
-              <td>B</td>
-              <td>C</td>
-            </tr>
-            <tr>
-              <th>Listen</th>
-              <td> </td>
-              <td> </td>
-              <td> </td>
-            </tr>
-            <tr>
-              <th>Bible</th>
-              <td> </td>
-              <td> </td>
-              <td> </td>
-            </tr>
-            <tr>
-              <th>Today</th>
-              <td> </td>
-              <td> </td>
-              <td> </td>
-            </tr>
-            <tr>
-              <th>Prayers</th>
-              <td>Shared</td>
-              <td>Group prayer</td>
-              <td>Quick start</td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> </td>
-              <td> </td>
-              <td> Custom</td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> </td>
-              <td> Send prayer</td>
-              <td> </td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> </td>
-              <td> Send prayer request</td>
-              <td> </td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> Private </td>
-              <td>Pray </td>
-              <td> </td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> </td>
-              <td> Response</td>
-              <td> </td>
-            </tr>
-
-            <tr>
-              <th>Journal</th>
-              <td> </td>
-              <td> </td>
-              <td> </td>
-            </tr>
-
-          </table>
-          <div class="blankHS"></div>
-
-          <table>
-            <tr>
-              <th></th>
-              <td>A</td>
-              <td>B</td>
-            </tr>
-            <tr>
-              <th>Listen</th>
-              <td> </td>
-              <td> </td>
-            </tr>
-            <tr>
-              <th>Bible</th>
-              <td> </td>
-              <td> </td>
-            </tr>
-            <tr>
-              <th>Today</th>
-              <td> </td>
-              <td> </td>
-            </tr>
-            <tr>
-              <th>Prayers</th>
-              <td>Group prayer</td>
-              <td>Quick start</td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> </td>
-              <td> Custom</td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> Shared</td>
-              <td> Send prayer</td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> </td>
-              <td> Send prayer request</td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> Private </td>
-              <td>Pray </td>
-            </tr>
-            <tr>
-              <th></th>
-              <td> </td>
-              <td> Response</td>
-            </tr>
-
-            <tr>
-              <th>Journal</th>
-              <td> </td>
-              <td> </td>
-            </tr>
-
-          </table>
-          <div class="blankHS"></div>
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -2732,7 +2599,6 @@
             </div>
           </div>
 
-          </h1>
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
@@ -2747,16 +2613,55 @@
             </div>
 
             <div class="Grid-cell">
-              <div class="element ">
+              <div class="element">
                 <h4> <strong> Analyze data</strong> </h4>
+                <div class="barGraph">
+                  <div>
+                      <div class="barGraphText">Success</div>
+                      <div class="barGraphText">Failure</div>
+                      <div class="barGraphText">Give up</div>
+                      <div class="barGraphText">Back track</div>
+                      <div class="barGraphText">Decision speed</div>
+
+                  </div>
+                  
+                  <div class="barGraphInner">
+                    <article id="bar_graph">
+                      <div>Complete 60% </div>
+                      <div>Complete 40% </div>
+                      <div>Complete 87% </div>
+                      <div>Complete 89% </div>
+                      <div>Complete 89% </div>
+
+                    </article>
+                  </div>
+                </div>
                 <ul>
                   <li>Success</li>
                   <li>Failure</li>
                   <li>Give up</li>
                   <li>Back track</li>
                   <li>Decision speed</li>
-
                 </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="barGraph">
+                <div class="barGraphInner">
+
+                  <article id="bar_graph">
+                    <div>Complete 60% </div>
+                    <div>Complete 40% </div>
+                    <div>Complete 87% </div>
+                    <div>Complete 89% </div>
+                  </article>
+                  <!--<article id="rerun">
+                      <p>RERUN</p>
+                    </article>-->
+                </div>
               </div>
             </div>
           </div>
@@ -2773,6 +2678,145 @@
             </div>
           </div>
           <div class="blankHXS"></div>
+          <div class="element">
+            <table>
+              <tr>
+                <th></th>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
+              </tr>
+              <tr>
+                <th>Listen</th>
+                <td> </td>
+                <td> </td>
+                <td> </td>
+              </tr>
+              <tr>
+                <th>Bible</th>
+                <td> </td>
+                <td> </td>
+                <td> </td>
+              </tr>
+              <tr>
+                <th>Today</th>
+                <td> </td>
+                <td> </td>
+                <td> </td>
+              </tr>
+              <tr>
+                <th>Prayers</th>
+                <td>Shared</td>
+                <td>Group prayer</td>
+                <td>Quick start</td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> </td>
+                <td> </td>
+                <td> Custom</td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> </td>
+                <td> Send prayer</td>
+                <td> </td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> </td>
+                <td> Send prayer request</td>
+                <td> </td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> Private </td>
+                <td>Pray </td>
+                <td> </td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> </td>
+                <td> Response</td>
+                <td> </td>
+              </tr>
+
+              <tr>
+                <th>Journal</th>
+                <td> </td>
+                <td> </td>
+                <td> </td>
+              </tr>
+
+            </table>
+          </div>
+
+          <div class="blankHS"></div>
+          <div class="element">
+
+            <table>
+              <tr>
+                <th></th>
+                <td>A</td>
+                <td>B</td>
+              </tr>
+              <tr>
+                <th>Listen</th>
+                <td> </td>
+                <td> </td>
+              </tr>
+              <tr>
+                <th>Bible</th>
+                <td> </td>
+                <td> </td>
+              </tr>
+              <tr>
+                <th>Today</th>
+                <td> </td>
+                <td> </td>
+              </tr>
+              <tr>
+                <th>Prayers</th>
+                <td>Group prayer</td>
+                <td>Quick start</td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> </td>
+                <td> Custom</td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> Shared</td>
+                <td> Send prayer</td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> </td>
+                <td> Send prayer request</td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> Private </td>
+                <td>Pray </td>
+              </tr>
+              <tr>
+                <th></th>
+                <td> </td>
+                <td> Response</td>
+              </tr>
+
+              <tr>
+                <th>Journal</th>
+                <td> </td>
+                <td> </td>
+              </tr>
+
+            </table>
+          </div>
+          <div class="blankHS"></div>
+
+
 
         </div>
       </section>
