--- a/glorify/index.html
+++ b/glorify/index.html
@@ -2588,6 +2588,16 @@
             </h2>
           </div>
           <!-- Arrow -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">Based on user feedback, navigating to the group
+                  prayer section isn't as straightforward as expected. At this point, I've come to understand that I
+                  should have conducted tree testing earlier in the process.
+                </p>
+              </div>
+            </div>
+          </div>
           <div class="blankHS"></div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -2599,161 +2609,198 @@
             </div>
           </div>
 
-          <div class="Grid Grid--gutters Grid--cols-2">
-            <div class="Grid-cell">
-              <div class="element">
-                <h4> <strong>Tasks</strong> </h4>
+          <div class="element">
+            <h4 class="accordion accordionBorderTop noMargin"><strong>Research plan &#38; testing questions</strong>
+            </h4>
+            <div class="accordion-content">
+              <div class="Grid Grid--full">
+                <div class="Grid-cell">
+                  <h4> <strong> Background</strong> </h4>
+                  <p> The goal is to add a new group prayer feature to the Glorify app, <span
+                      class="textDecor GLORIFY">simplifying navigation</span>. Currently, accessing this section is
+                    less intuitive than desired, so my plan is to enable users to easily find and engage with group
+                    prayers within the content.
+                  </p>
 
-                <ul>
-                  <li>Find group prayer</li>
-                  <li>List out a high level organization</li>
-                  <li>Have participant click through the menus</li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="Grid-cell">
-              <div class="element">
-                <h4> <strong> Analyze data</strong> </h4>
-                <div class="barGraph">
-                  <div>
-                      <div class="barGraphText">Success</div>
-                      <div class="barGraphText">Failure</div>
-                      <div class="barGraphText">Give up</div>
-                      <div class="barGraphText">Back track</div>
-                      <div class="barGraphText">Decision speed</div>
-
-                  </div>
-                  
-                  <div class="barGraphInner">
-                    <article id="bar_graph">
-                      <div>Complete 60% </div>
-                      <div>Complete 40% </div>
-                      <div>Complete 87% </div>
-                      <div>Complete 89% </div>
-                      <div>Complete 89% </div>
-
-                    </article>
-                  </div>
-                </div>
-                <ul>
-                  <li>Success</li>
-                  <li>Failure</li>
-                  <li>Give up</li>
-                  <li>Back track</li>
-                  <li>Decision speed</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="barGraph">
-                <div class="barGraphInner">
-
-                  <article id="bar_graph">
-                    <div>Complete 60% </div>
-                    <div>Complete 40% </div>
-                    <div>Complete 87% </div>
-                    <div>Complete 89% </div>
-                  </article>
-                  <!--<article id="rerun">
-                      <p>RERUN</p>
-                    </article>-->
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="element">
-                  <p class="specialTextNote colorGLORIFYBlue u-textCenter">Based on user feedback, navigating to the
-                    group prayer section isn't as straightforward as expected. At this point, I've come to understand
-                    that I should have conducted tree testing earlier in the process.
+              <div class="Grid Grid--gutters Grid--cols-3">
+                <div class="Grid-cell">
+                  <h4> <strong>Research goal</strong> </h4>
+                  <p>To evaluate and optimize the navigation structure of the Glorify app, ensuring that users can
+                    intuitively and efficiently locate the group prayer feature within the content.
                   </p>
                 </div>
+                <div class="Grid-cell">
+                  <h4> <strong>Research Method</strong> </h4>
+                  <p> Moderated testing</p>
+                </div>
+                <div class="Grid-cell">
+                  <h4> <strong>Participants</strong> </h4>
+                  <p> 3</p>
+                </div>
+              </div>
+              <div class="Grid Grid--full">
+                <div class="Grid-cell">
+                  <h4> <strong> Research questions</strong> </h4>
+                  <ul>
+                    <li>
+                      <strong>Find a Group Prayer:</strong> "Please locate the section where you would join a group
+                      prayer. How would you navigate there?"
+                    </li>
+                    <li>
+                      <strong>Understanding the Path: </strong> "Can you describe the path you took to reach the group
+                      prayer section? Was there anything confusing or unclear?"
+                    </li>
+                    <li>
+                      <strong>Alternative Routes:</strong> "Is there another way you might have found the group prayer
+                      section? Why did you choose the path you took?"
+                    </li>
+                    <li>
+                      <strong>Ease of Use: </strong>"On a scale from 1 to 5, how easy or difficult was it to find the
+                      group prayer feature? What, if anything, would you change to make it easier?"
+                    </li>
+                    <li>
+                      <strong>General Feedback:</strong> "Do you have any general comments or suggestions regarding
+                      the navigation to the group prayer section, or anything else within the app?"
+                    </li>
+
+                  </ul>
+                </div>
+              </div>
+              <div class="blankHXS"></div>
+
+            </div>
+
+            <h4 class="accordion noMargin"><strong>The tree structure &#38; test</strong></h4>
+            <div class="accordion-content">
+              <ul>
+                <li>List out a high level organization</li>
+                <li>Have participant click through the menus</li>
+              </ul>
+              <div class="blankHXS"></div>
+              <table>
+                <tr>
+                  <th></th>
+                  <td>A</td>
+                  <td>B</td>
+                  <td>C</td>
+                </tr>
+                <tr>
+                  <th>Listen</th>
+                  <td> </td>
+                  <td> </td>
+                  <td> </td>
+                </tr>
+                <tr>
+                  <th>Bible</th>
+                  <td> </td>
+                  <td> </td>
+                  <td> </td>
+                </tr>
+                <tr>
+                  <th>Today</th>
+                  <td> </td>
+                  <td> </td>
+                  <td> </td>
+                </tr>
+                <tr>
+                  <th>Prayers</th>
+                  <td>Shared</td>
+                  <td>Group prayer</td>
+                  <td>Quick start</td>
+                </tr>
+                <tr>
+                  <th></th>
+                  <td> </td>
+                  <td> </td>
+                  <td> Custom</td>
+                </tr>
+                <tr>
+                  <th></th>
+                  <td> </td>
+                  <td> </td>
+                  <td> Join</td>
+                </tr>
+                <tr>
+                  <th></th>
+                  <td> </td>
+                  <td> Send prayer</td>
+                  <td> </td>
+                </tr>
+                <tr>
+                  <th></th>
+                  <td> </td>
+                  <td> Send prayer request</td>
+                  <td> </td>
+                </tr>
+                <tr>
+                  <th></th>
+                  <td> Private </td>
+                  <td>Pray </td>
+                  <td> </td>
+                </tr>
+                <tr>
+                  <th></th>
+                  <td> </td>
+                  <td> Response</td>
+                  <td> </td>
+                </tr>
+
+                <tr>
+                  <th>Journal</th>
+                  <td> </td>
+                  <td> </td>
+                  <td> </td>
+                </tr>
+
+              </table>
+              <div class="blankHXS"></div>
+            </div>
+
+            <h4 class="accordion noMargin"><strong>Tree testing results &#38; Analyze data</strong></h4>
+
+            <div class="accordion-content accordionBorderBottom">
+              <div class="barGraph">
+                <div>
+                  <div class="barGraphText">Success rate</div>
+                  <div class="barGraphText">Directness</div>
+                  <div class="barGraphText">Time</div>
+                  <div class="barGraphText">Path</div>
+
+                </div>
+
+                <div class="barGraphInner">
+                  <article id="bar_graph">
+                    <div class="grow100"> 100&#37; </div>
+                    <div class="grow0"> 4 - 10 clicks </div>
+                    <div class="grow0"> 40 seconds - 80 seconds </div>
+                    <div class="grow0"> 1 alternative path </div>
+
+                  </article>
+                </div>
+              </div>
+
+              <div class="blankHXS"></div>
+            </div>
+          </div>
+
+
+
+
+          <div class="blankHS"></div>
+
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                  <span class="colorGLORIFYOrange">Content update</span>
+                </h2>
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
+
           <div class="element">
-            <table>
-              <tr>
-                <th></th>
-                <td>A</td>
-                <td>B</td>
-                <td>C</td>
-              </tr>
-              <tr>
-                <th>Listen</th>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-              </tr>
-              <tr>
-                <th>Bible</th>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-              </tr>
-              <tr>
-                <th>Today</th>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-              </tr>
-              <tr>
-                <th>Prayers</th>
-                <td>Shared</td>
-                <td>Group prayer</td>
-                <td>Quick start</td>
-              </tr>
-              <tr>
-                <th></th>
-                <td> </td>
-                <td> </td>
-                <td> Custom</td>
-              </tr>
-              <tr>
-                <th></th>
-                <td> </td>
-                <td> Send prayer</td>
-                <td> </td>
-              </tr>
-              <tr>
-                <th></th>
-                <td> </td>
-                <td> Send prayer request</td>
-                <td> </td>
-              </tr>
-              <tr>
-                <th></th>
-                <td> Private </td>
-                <td>Pray </td>
-                <td> </td>
-              </tr>
-              <tr>
-                <th></th>
-                <td> </td>
-                <td> Response</td>
-                <td> </td>
-              </tr>
-
-              <tr>
-                <th>Journal</th>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-              </tr>
-
-            </table>
-          </div>
-
-          <div class="blankHS"></div>
-          <div class="element">
-
             <table>
               <tr>
                 <th></th>
