accordion with background

--- a/glorify/index.html
+++ b/glorify/index.html
@@ -2607,7 +2607,7 @@
           </div>
 
           <div class="element">
-            <h3 class="accordion accordionBorderTop noMargin"><strong>Research plan &#38; testing questions</strong>
+            <h3 class="accordion accordionBorderTop noMargin withBg"><strong>Research plan &#38; testing questions</strong>
             </h3>
             <div class="accordion-content">
               <div class="blankHXS"></div>
@@ -2670,7 +2670,7 @@
               <div class="blankHXS"></div>
             </div>
 
-            <h3 class="accordion noMargin"><strong>The tree structure &#38; test</strong></h3>
+            <h3 class="accordion noMargin withBg"><strong>The tree structure &#38; test</strong></h3>
             <div class="accordion-content">
               <div class="blankHXS"></div>
               <ul>
@@ -2757,7 +2757,7 @@
               <div class="blankHXS"></div>
             </div>
 
-            <h3 class="accordion noMargin"><strong>Tree testing results &#38; Analyze data</strong></h3>
+            <h3 class="accordion accordionBorderBottom noMargin withBg"><strong>Tree testing results &#38; Analyze data</strong></h3>
 
             <div class="accordion-content accordionBorderBottom">
               <div class="barGraph">
