--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="../../main.css">
   <script type="text/javascript" src="../../scripts.js"></script>
 
-  <title>Vicky W. | Product Designer | UI/UX Designer | Manifold groud</title>
+  <title>Vicky W. | UX Designer | Manifold groud</title>
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
