--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky W. | Product Designer | UI/UX Designer | Thesis</title>
+  <title>Vicky W. | UX Designer | Thesis</title>
   <meta name="keywords"
     content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
   <meta name="author" content="Vicky Wang">
