--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Vicky W. | Product Designer | UI/UX Designer | Gardeners Hub </title>
+  <title>Vicky W. | UX Designer | Gardeners Hub </title>
   <meta property="og:site_name" content="VICKY WANG">
 
   <meta property="og:url" content="/" />
