--- a/glorify/index.html
+++ b/glorify/index.html
@@ -31,6 +31,8 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
+  <!--   <script type="text/javascript" src="../scripts_project.js"></script>
+ -->
 
 
 
