--- a/glorify/index.html
+++ b/glorify/index.html
@@ -424,8 +424,11 @@
           <h4> Hi-fi prototype </h4>
         </div>
       </div>
+
       <div class="Grid-cell">
-        <div class="element"> <img class=" widthS" src="HiFi_FinalEnhancement.gif" alt="New User">
+
+        <div class="gif-wrapper element">
+          <img class="widthS me" id="gifImage" src="HiFi_FinalEnhancement.png" alt="GIF" />
         </div>
         <div class="element">
           <h4> Enhancement </h4>
