--- a/glorify/index.html
+++ b/glorify/index.html
@@ -418,7 +418,10 @@
     <!-- Prototype Title -->
     <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
       <div class="Grid-cell">
-        <div class="element"> <img class=" widthS" src="HiFi_FinalPrayer.gif" alt="New User">
+        <div class="element">  <img class="gif-toggle widthS" 
+          data-gif="HiFi_FinalPrayer.gif" 
+          data-static="HiFi_FinalPrayer.png" 
+          src="HiFi_FinalPrayer.png" />
         </div>
         <div class="element">
           <h4> Hi-fi prototype </h4>
@@ -428,8 +431,10 @@
       <div class="Grid-cell">
 
         <div class="gif-wrapper element">
-          <img class="widthS me" id="gifImage" src="HiFi_FinalEnhancement.png" alt="GIF" />
-        </div>
+          <img class="gif-toggle widthS" 
+          data-gif="HiFi_FinalEnhancement.gif" 
+          data-static="HiFi_FinalEnhancement.png" 
+          src="HiFi_FinalEnhancement.png" />        </div>
         <div class="element">
           <h4> Enhancement </h4>
         </div>
