--- a/glorify/index.html
+++ b/glorify/index.html
@@ -373,22 +373,31 @@
     <div class="blankHXS"></div>
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter wrapper">
       <div class="Grid-cell ">
-        <div class="element"> <img class="widthS" src="HiFi_GroupPrayer_QuickStartPtt.gif" alt="New User">
+        <div class="gif-wrapper element">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif" data-static="HiFi_GroupPrayerCover.png"
+            src="HiFi_GroupPrayerCover.png"/>
         </div>
         <div class="element">
           <h4> Quick start group prayer</h4>
         </div>
       </div>
-      <div class="Grid-cell ">
-        <div class="element"> <img class="widthS" src="HiFi_GroupPrayer_CustomPtt.gif" alt="New User">
+      <div class="Grid-cell">
+        <div class="gif-wrapper element">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCover.png"
+          src="HiFi_GroupPrayerCover.png"/>
         </div>
+   
+
         <div class="element">
           <h4> Customized group prayer</h4>
         </div>
       </div>
       <div class="Grid-cell ">
-        <div class="element"> <img class="widthS" src="HiFi_GroupPrayer_JoinPtt.gif" alt="New User">
+        <div class="gif-wrapper element">
+          <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCover.png"
+          src="HiFi_GroupPrayerCover.png"/>
         </div>
+
         <div class="element">
           <h4> Join group prayer</h4>
         </div>
@@ -418,10 +427,8 @@
     <!-- Prototype Title -->
     <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
       <div class="Grid-cell">
-        <div class="element">  <img class="gif-toggle widthS" 
-          data-gif="HiFi_FinalPrayer.gif" 
-          data-static="HiFi_FinalPrayer.png" 
-          src="HiFi_FinalPrayer.png" />
+        <div class="element"> <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif"
+            data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
         </div>
         <div class="element">
           <h4> Hi-fi prototype </h4>
@@ -431,10 +438,9 @@
       <div class="Grid-cell">
 
         <div class="gif-wrapper element">
-          <img class="gif-toggle widthS" 
-          data-gif="HiFi_FinalEnhancement.gif" 
-          data-static="HiFi_FinalEnhancement.png" 
-          src="HiFi_FinalEnhancement.png" />        </div>
+          <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancement.png"
+            src="HiFi_FinalEnhancement.png" />
+        </div>
         <div class="element">
           <h4> Enhancement </h4>
         </div>
@@ -539,8 +545,8 @@
     <section id="content1">
       <div class="Grid Grid--full u-textCenter wrapper">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Research</span><img class="widthLogo"
-              src="../icon/icon_research.svg" alt="Research">
+          <h1 class="Grid Grid--center"> <span>Research</span><img class="widthLogo" src="../icon/icon_research.svg"
+              alt="Research">
           </h1>
         </div>
       </div>
@@ -1639,8 +1645,7 @@
     <section id="content2">
       <div class="Grid Grid--full u-textCenter wrapper">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Design</span><img class="widthLogo" src="../icon/note.svg"
-              alt="Design">
+          <h1 class="Grid Grid--center"> <span>Design</span><img class="widthLogo" src="../icon/note.svg" alt="Design">
           </h1>
         </div>
       </div>
@@ -2448,8 +2453,8 @@
     <section id="content3">
       <div class="Grid Grid--full u-textCenter wrapper">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Iterate</span><img class="widthLogo"
-              src="../icon/icon_Iteration.svg" alt="Iterate">
+          <h1 class="Grid Grid--center"> <span>Iterate</span><img class="widthLogo" src="../icon/icon_Iteration.svg"
+              alt="Iterate">
           </h1>
         </div>
       </div>
@@ -2861,7 +2866,8 @@
               <div class="Grid-cell">
                 <div class="element">
                   <h4> <strong> Number of Visits&#58; </strong> </h4>
-                  <p>With only three participants, consider listing out individual participant paths rather than aggregating.</p>
+                  <p>With only three participants, consider listing out individual participant paths rather than
+                    aggregating.</p>
                 </div>
               </div>
             </div>
@@ -2881,10 +2887,12 @@
                 <div class="element">
                   <h5> <strong> Participant 2&#58; </strong></h5>
                   <ul>
-                    <li class="listCircle">Visited "My Prayer Groups" then "Create a Prayer Group": (successfully completed task 1)
+                    <li class="listCircle">Visited "My Prayer Groups" then "Create a Prayer Group": (successfully
+                      completed task 1)
 
                     </li>
-                    <li class="listCircle">Visited "Join a Prayer Group" then "Featured Prayer Groups": (successfully completed task 2)
+                    <li class="listCircle">Visited "Join a Prayer Group" then "Featured Prayer Groups": (successfully
+                      completed task 2)
                     </li>
                   </ul>
                 </div>
@@ -2896,7 +2904,8 @@
                     <li class="listCircle">Visited "Create a Prayer Group": Once (successfully completed task 1)
 
                     </li>
-                    <li class="listCircle">Visited "Join a Prayer Group", returned to "Group Prayer" main node, then went to "Featured Prayer Groups": (successfully completed task 2 but with hesitation)
+                    <li class="listCircle">Visited "Join a Prayer Group", returned to "Group Prayer" main node, then
+                      went to "Featured Prayer Groups": (successfully completed task 2 but with hesitation)
                     </li>
                   </ul>
                 </div>
@@ -3457,8 +3466,8 @@
 
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Enhance</span><img class="widthLogo"
-              src="../icon/icon_Redesign.svg" alt="Enhance">
+          <h1 class="Grid Grid--center"> <span>Enhance</span><img class="widthLogo" src="../icon/icon_Redesign.svg"
+              alt="Enhance">
           </h1>
         </div>
       </div>
